@@ -114,13 +114,14 @@
 #include <spot/twaalgos/aiger.hh>
 #include <spot/twaalgos/alternation.hh>
 #include <spot/twaalgos/cleanacc.hh>
-#include <spot/twaalgos/degen.hh>
-#include <spot/twaalgos/dot.hh>
-#include <spot/twaalgos/dualize.hh>
 #include <spot/twaalgos/cobuchi.hh>
 #include <spot/twaalgos/copy.hh>
 #include <spot/twaalgos/complete.hh>
 #include <spot/twaalgos/complement.hh>
+#include <spot/twaalgos/dbranch.hh>
+#include <spot/twaalgos/degen.hh>
+#include <spot/twaalgos/dot.hh>
+#include <spot/twaalgos/dualize.hh>
 #include <spot/twaalgos/emptiness.hh>
 #include <spot/twaalgos/gtec/gtec.hh>
 #include <spot/twaalgos/genem.hh>
@@ -678,11 +679,14 @@ def state_is_accepting(self, src) -> "bool":
 %include <spot/twaalgos/aiger.hh>
 %include <spot/twaalgos/alternation.hh>
 %include <spot/twaalgos/cleanacc.hh>
-%include <spot/twaalgos/degen.hh>
-%include <spot/twaalgos/dot.hh>
 %include <spot/twaalgos/cobuchi.hh>
 %include <spot/twaalgos/copy.hh>
 %include <spot/twaalgos/complete.hh>
+%include <spot/twaalgos/dbranch.hh>
+%include <spot/twaalgos/degen.hh>
+%include <spot/twaalgos/determinize.hh>
+%include <spot/twaalgos/dot.hh>
+%include <spot/twaalgos/dualize.hh>
 %feature("flatnested") spot::twa_run::step;
 %include <spot/twaalgos/emptiness.hh>
 %template(list_step) std::list<spot::twa_run::step>;
@@ -694,8 +698,6 @@ def state_is_accepting(self, src) -> "bool":
 %include <spot/twaalgos/gfguarantee.hh>
 %include <spot/twaalgos/compsusp.hh>
 %include <spot/twaalgos/contains.hh>
-%include <spot/twaalgos/determinize.hh>
-%include <spot/twaalgos/dualize.hh>
 %include <spot/twaalgos/langmap.hh>
 %include <spot/twaalgos/magic.hh>
 %include <spot/twaalgos/minimize.hh>
